fixed a bug with the slider gradient overflowing

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -170,7 +170,7 @@ kbd,
 pre,
 samp {
   font-family: monospace, serif;
-  _font-family: 'courier new', monospace;
+  _font-family: "courier new", monospace;
   font-size: 1em; }
 
 /*
@@ -289,7 +289,7 @@ form {
  * Define consistent border, margin, and padding.
  */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em; }
 
@@ -448,7 +448,7 @@ h1 {
   font-size: 32px;
   font-weight: 300;
   margin: 0;
-  padding: .5em 0 .3em 0;
+  padding: 0.5em 0 0.3em 0;
   text-shadow: 0 0 64px rgba(255, 255, 255, 0.6); }
   @media all and (min-width: 540px) {
     h1 {
@@ -719,7 +719,8 @@ a:active, a:focus, a:hover {
     width: 32px;
     cursor: pointer;
     -webkit-transition: background 0.3s ease;
-    transition: background 0.3s ease; }
+    transition: background 0.3s ease;
+    position: relative; }
     .slider::-webkit-slider-thumb:focus, .slider::-webkit-slider-thumb:hover {
       background: #a5d27e; }
     .slider::-webkit-slider-thumb:before {
@@ -930,7 +931,7 @@ a:active, a:focus, a:hover {
   background: lightgray; }
 
 code, pre {
-  font-family: 'Monaco', 'Andale Mono', 'Courier New', monospace; }
+  font-family: "Monaco", "Andale Mono", "Courier New", monospace; }
 
 pre {
   padding: 8px;
