--- a/app/styles/sass/mixins.scss
+++ b/app/styles/sass/mixins.scss
@@ -381,6 +381,7 @@
         cursor: pointer;
         -webkit-transition: background 0.3s ease;
         transition: background 0.3s ease;
+        position: relative;
         &:focus, &:hover {
             background: $primary-widget-bg-hover;
         }
